# polygon_editor

./: Cargo.toml  LICENSE  test.json  test2.json
polygon_examples/: duzo_przeciec.json  test.json  test2.json
src/: app.rs  lib.rs  line_alg.rs  main.rs  my_math.rs  polygon.rs  state_machine.rs  style.rs
src/polygon/: raw_polygon.rs
