[package]
name = "polygon_editor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "polygon_editor"
src = "src/main.rs"

[dependencies]
rand = "0.8.5"
line_intersection = "0.4.0"
geo = "0.26.0"

[dependencies.sfml]
git = "https://github.com/jeremyletang/rust-sfml.git"

[dependencies.egui-sfml]
git = "https://github.com/crumblingstatue/egui-sfml.git"